TS-2959 Fix gcc 4.9.2 compiler warning. This closes #137.

(cherry picked from commit aba98345dd86e923a42f36105564196ad8cad302)

Conflicts:
	CHANGES
	iocore/hostdb/P_MultiCache.h